--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "wxt-vue-starter",
   "description": "Local bookmark manager",
-  "private": true,
+  "license": "MIT",
   "version": "1.0.1",
-  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pingnas/Local-bookmark-manager"
+  },
   "scripts": {
     "serve": "wxt",
     "dev:firefox": "wxt -b firefox",
@@ -23,7 +26,7 @@
     "ag-grid-vue3": "^34.1.2",
     "dayjs": "^1.11.18",
     "dexie": "^4.2.0",
-    "lodash-es": "^4.17.21",
+    "es-toolkit": "^1.39.10",
     "lottie-web": "^5.13.0",
     "miao-lang": "^1.0.5",
     "normalize.css": "^8.0.1",
@@ -37,7 +40,6 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.1.4",
-    "@types/lodash-es": "^4.17.12",
     "@vitejs/plugin-vue-jsx": "5.1.1",
     "@wxt-dev/auto-icons": "^1.1.0",
     "@wxt-dev/module-vue": "1.0.2",
